# bookmem

./: .dockerignore  .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
bookmem/: __init__.py  agent_exports.py  answer_pack.py  api.py  audit.py  backup.py  book_files.py  book_graph.py  calibre.py  chunking.py  citation_exports.py  claims.py  clean.py  clean_check.py  clean_derived.py  cli.py  concepts.py  config.py  doctor.py  doctor_deep.py  duplicates.py  editions.py  embedding_management.py  embeddings.py  evaluation.py  frontmatter.py  graph_exports.py  grimmory.py  hermes.py  human_review.py  importers.py  index_versions.py  ingest.py  jobs.py  loc.py  manifest.py  mcp_server.py  metadata_enrichment.py  migrations.py  notes.py  (+24 more)
config/: agent_permissions.yaml  bmdc.yaml  citation_styles.yaml  cleaning_profiles.yaml  embedding_models.yaml  note_templates.yaml  reference_export_formats.yaml  setup_presets.yaml  summary_providers.yaml  workspaces.yaml
config/citation_styles.d/: README.md  example.yaml
config/profiles/: assistant_agent.yaml  docker.yaml  hermes.yaml  local.yaml
config/reference_export_formats.d/: README.md  example.yaml
contrib/hermes/: README.md  SKILL.md  bookmem.skill.md  bookmem.tool.yaml  install.sh
data/books/158-applied-psychology-personal-development/: README.md
data/books/332-finance-investing-and-financial-markets/: README.md
data/books/999-unclassified/: README.md
data/queries/: personal-finance.yaml  systems-thinking.yaml
docs/: AGENT_EXPORTS.md  AGENT_PERMISSIONS.md  ANSWER_PACKS.md  API_AUTH.md  ARCHITECTURE.md  AUDIT.md  BACKUP_RESTORE.md  BOOK_CLEANUP.md  BOOK_GRAPH.md  CALIBRE.md  CITATIONS.md  CLAIMS.md  CLASSIFICATION_IP.md  CLEANING_PROFILES.md  CLEAN_CHECK.md  CLEAN_DERIVED.md  COMMAND_REFERENCE.md  CONCEPTS.md  CONFIGURATION.md  DATA_MODEL.md  DOCKER.md  DOCTOR.md  DUPLICATES.md  EDITIONS.md  EMBEDDINGS.md  EVALUATION.md  FILENAME_METADATA.md  FRONTMATTER.md  GRAPH_EXPORTS.md  GRIMMORY.md  HERMES.md  HUMAN_REVIEW.md  IMPORT_ADAPTERS.md  INDEX_VERSIONING.md  INSTALL.md  ISBN_DISCOVERY.md  JOBS.md  LOCAL_API.md  LOC_ENRICHMENT.md  MANIFEST.md  (+35 more)
eval/: queries.yaml
migrations/: 0001_initial.py  0002_add_index_metadata.py  0003_add_edition_fields.py  __init__.py
plugins/: README.md
plugins/importers/: example_epub_importer.yaml
plugins/summary_providers/: example_summary_provider.yaml
prompts/: answer_from_corpus.md  classify_book.md  extract_key_models.md  generate_implementation_notes.md  summarise_book.md
tests/: conftest.py  test_citations.py  test_classification.py  test_cleaning.py  test_doctor.py  test_duplicates.py  test_exports.py  test_frontmatter.py  test_hermes.py  test_ingest.py  test_isbn_detection.py  test_manifest.py  test_paths.py  test_search.py
tests/fixtures/cleaned/: Clean Productivity Book - Jane Example - 9780306406157.md  Clean Productivity Book Duplicate - Jane Example - 9780306406157.md
tests/fixtures/expected/: frontmatter_minimal.json
tests/fixtures/raw/: Messy Productivity Book - Jane Example - 9780306406157.md
