[project]
name = "bookmem"
version = "0.9.0"
description = "Machine-readable Markdown book corpus for agent retrieval"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
authors = [{ name = "Martyn Forryan" }]
dependencies = [
    "lancedb>=0.21.0",
    "sentence-transformers>=3.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
bookmem = "bookmem.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
