[project]
name = "bookmem"
version = "0.63.3"
description = "Machine-readable Markdown book corpus for agent retrieval"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
authors = [{ name = "Martyn Forryan" }]
maintainers = [{ name = "Martyn Forryan" }]
dependencies = [
    "lancedb>=0.21.0",
    "sentence-transformers>=3.0.0",
    "typer>=0.14.0",
    "rich>=13.7.0",
    "textual>=0.52.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "mcp>=1.2.0",
    "pypdf>=4.0.0",
    "uvicorn[standard]>=0.30.0",
    "fastapi>=0.111.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
bookmem = "bookmem.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bookmem"]

# Ship the default config tree inside the wheel so `bookmem hermes init` can
# seed ~/.hermes/bookmem/config without needing the repo checkout on disk.
[tool.hatch.build.targets.wheel.force-include]
"config" = "bookmem/_bundled_config"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[project.urls]
Homepage = "https://github.com/iamfoz/bookmem"
Repository = "https://github.com/iamfoz/bookmem"
Changelog = "https://github.com/iamfoz/bookmem/blob/main/CHANGELOG.md"
Documentation = "https://github.com/iamfoz/bookmem/tree/main/docs"
